--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         <img src="images/hero-desktop.jpg" alt="Fashionable Woman" />
       </div>
       <div class="card-text">
-        <h1><span>We're</span> coming soon</h1>
-        <p>Hello fellow shoppers! We're currently building our new fashion store. 
-          Add your email below to stay up-to-date with announcements and our launch deals.</p>
+        <div class="text-content">
+          <div class="desktop-logo">
+            <img src="images/logo.svg" alt="Base Apparel Logo" />
+          </div>
+          <h1><span>We're</span> coming soon</h1>
+          <p>Hello fellow shoppers! We're currently building our new fashion store. 
+            Add your email below to stay up-to-date with announcements and our launch deals.</p>
           <div class="card-input">
             <input type="email" id="email" name="email" value="Email Address">
-            
           </div>
+        </div>
       </div>
     </div>
   </div>
