--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             Add your email below to stay up-to-date with announcements and our launch deals.</p>
           <div class="card-input">
             <input type="email" id="email" name="email" value="Email Address">
+            <div class="button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
+            </div>
           </div>
         </div>
       </div>
