--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
             Add your email below to stay up-to-date with announcements and our launch deals.</p>
           <div class="card-input">
             <input type="email" id="email" name="email" value="Email Address">
+            <div class="error hide">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"><g fill="none" fill-rule="evenodd"><circle cx="12" cy="12" r="12" fill="#F96464"/><path fill="#FFF" fill-rule="nonzero" d="M13.256 6v9.056h-2V6h2zm-.944 12.464c-.384 0-.699-.104-.944-.312a1.027 1.027 0 0 1-.368-.824c0-.33.125-.608.376-.832.25-.224.563-.336.936-.336.373 0 .68.112.92.336.24.224.36.501.36.832 0 .341-.117.616-.352.824-.235.208-.544.312-.928.312z"/></g></svg>
+            </div>
             <div class="button">
               <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
             </div>
+          </div>
+          <div class="error-message hide">
+            <p>Please provide a valid email</p>
           </div>
         </div>
       </div>
